--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,12 @@ name = Unix-errno
 
 [ReadmeFromPod]
 ; enable = false
-filename = lib/Unix/errno.pm6
+filename = lib/Unix/errno.rakumod
 
 [PruneFiles]
 ; match = ^ 'xt/'
+
+[Badges]
+provider = github-actions/test
+
+[UploadToZef]
